[package]
name = "updater"
version = "0.1.0"
authors = ["nic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
serde = "1.0"
serde_derive = "1.0.126"
toml = "0.5.8"

[repositories]
github = "github_one"
travis = "travis_one"